# acme-metaflow

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yml
admin/: assume_role.sh  install_argo_cli.sh  refresh_credentials.sh  test_s3_access.sh
docs/: mkdocs.yml
docs/docs/: api.md  index.md  install.md
infra/k8/: argo.sh  deployment.yml  forward_argo_ui.sh  forward_metadata_service.sh  kustomization.yml  namespace.yml  role.yml  rolebinding.yml  service.yml
src/acme_metaflow/: __init__.py  _main.py
tutorials/00-helloworld/: README.md
tutorials/01-parallel-branches/: README.md  parallel_flow.py
tutorials/02-foreach/: README.md  foreach.py
tutorials/03-artifacts/: README.md  merge_artifacts.py  use_artifacts.py
tutorials/04-parameters/: README.md  parameter_flow.py
tutorials/05-access-results/: README.md  check_result.ipynb  simple_flow.py
tutorials/07-debug/: README.md  debug_flow.py
tutorials/08-dependency-management/: README.md  dependency_flow.py
tutorials/08-remote-compute/: README.md  hello-cloud.py
tutorials/09-failure-handling/: README.md  failure_handling_flow.py
tutorials/10-failure-handling/: failure_handling_flow.py
tutorials/10-metadata-service-and-ui/: README.md
tutorials/11-configure-aws/: README.md
tutorials/11-configure-s3-datastore/: README.md
tutorials/12-configure-k8-metadata-service/: README.md
tutorials/13-remote-compute/: README.md  hello-cloud.py
tutorials/13-remote-orchestration/: README.md
tutorials/14-accessing-secrets/: README.md
(+8 files in other folders)
